infrastructure/base/controllers/minio/istio.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-api
  namespace: minio
spec:
  hosts:
    - s3.${DOMAIN}
  gateways:
    - istio-system/fin-gw
  http:
    - name: api
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: minio.minio.svc.cluster.local
            port:
              number: 9000
      timeout: 600s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-console
  namespace: minio
spec:
  hosts:
    - console-s3.${DOMAIN}
  gateways:
    - istio-system/fin-gw
  http:
    - name: console
      match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: minio.minio.svc.cluster.local
            port:
              number: 9001
      timeout: 300s
